# jijiai

./: .gitignore  README.md  hotwords.txt  index.html  package-lock.json  package.json  restart.sh  server.cjs  tauri.conf.json  test-download.cjs  test-model-download.js  test-token.cjs  vite.config.ts
.agent/browser/: dom_localhost_1774537495784.html
docs/: README.md  aliyun-asr-integration-notes.md  prd.md  product-brochure.md  project-background.md  technical-architecture.md
public/: config.json  test-asr.html
scripts/: rules.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: SettingsModal.tsx  SuggestionModal.tsx
src/utils/: aliyun-asr.ts  rule-engine.ts  settings.ts  transcript.test.ts
src123/: App.tsx  index.css
src123/components/: KeywordDisplay.tsx
src123/utils/: local-asr.ts  rule-engine.ts  settings.ts  transcript.test.ts
src_副本/: App.tsx
src_副本/components/: SettingsModal.tsx
src_副本/utils/: aliyun-asr.ts  rule-engine.ts
