[package]
name = "jijihuashu-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aho-corasick = "1.1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = "2.0"

[features]
default = ["tauri/default"]
